--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -73,7 +73,7 @@
                             android:id="@+id/homeText1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Form"
+                            android:text="@string/Formulir"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,7 @@
                             android:id="@+id/homeText2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Calculator"
+                            android:text="@string/Kalkulator"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
                             android:id="@+id/homeText3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Coffee Shop"
+                            android:text="@string/WarungKopi"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -204,7 +204,7 @@
                             android:id="@+id/homeText4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Temp Convert"
+                            android:text="@string/KonversiSuhu"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -242,7 +242,7 @@
                             android:id="@+id/homeText5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Profile"
+                            android:text="@string/ProfilSaya"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -280,7 +280,7 @@
                             android:id="@+id/homeText6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Exit"
+                            android:text="@string/Keluar"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
