--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
                         android:id="@+id/homeText1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Form"
+                        android:text="@string/Formulir"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +112,7 @@
                         android:id="@+id/homeText2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Calculator"
+                        android:text="@string/Kalkulator"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
                         android:id="@+id/homeText3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Coffee Shop"
+                        android:text="@string/WarungKopi"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +205,7 @@
                         android:id="@+id/homeText4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Temp Convert"
+                        android:text="@string/KonversiSuhu"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -260,7 +260,7 @@
                         android:id="@+id/homeText5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Profile"
+                        android:text="@string/ProfilSaya"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -298,7 +298,7 @@
                         android:id="@+id/homeText6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Exit"
+                        android:text="@string/Keluar"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
