--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,7 +38,7 @@
         android:id="@+id/tvScndNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bismillah *Software Engineer*"
+        android:text="@string/deskripsi_profil"
         android:textSize="20dp"
         android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                 android:id="@+id/tvSekolah"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Sekolah"
+                android:text="@string/sekolah"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="SMK Negri 6 SKA"
+                android:text="@string/nama_sekolah"
                 android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="MissingConstraints"/>
@@ -81,7 +81,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Kelas"
+                android:text="@string/kelas"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="XI RPL"
+                android:text="@string/nama_kelas"
                 android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:ignore="MissingConstraints"
@@ -121,7 +121,7 @@
                 android:id="@+id/tvKelahiran"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kelahiran"
+                android:text="@string/kelahiran"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginVertical="5dp"
@@ -131,7 +131,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="17, Oktober, 2008"
+                android:text="@string/tanggal_lahir"
                 android:textSize="16dp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
                 android:id="@+id/tvGender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Gender"
+                android:text="@string/jenis_kelamin"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_marginStart="16dp"
@@ -153,7 +153,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Laki - laki"
+                android:text="@string/laki_laki"
                 android:textSize="16dp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +183,7 @@
                 android:id="@+id/tvSosmed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sosial Media"
+                android:text="@string/sosial_media"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -273,7 +273,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="Hidup itu sekali, dan mati itu pasti, bisa jadi nanti, atau setelah ini."
+            android:text="@string/quotes"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cvData3"
@@ -283,7 +283,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(Menantang Rasi Bintang - FSTVLST)"
+            android:text="@string/sumber_quotes"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
