--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -44,7 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
-                    android:hint="Masukkan Suhu"
+                    android:hint="@string/masukkan_suhu"
                     android:inputType="numberDecimal"
                     android:textSize="40dp"
                     android:background="@null"
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="35dp"
-                    android:text="Hasil Suhu"
+                    android:text="@string/hasil_suhu"
                     android:textSize="40dp"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
         android:id="@+id/btHitung"
         android:layout_width="200dp"
         android:layout_height="70dp"
-        android:text="Hitung"
+        android:text="@string/hitung"
         app:cornerRadius="10dp"
         android:textColor="@color/logoawal"
         android:layout_marginTop="25dp"
