--- a/app/src/main/res/layout-land/activity_profile.xml
+++ b/app/src/main/res/layout-land/activity_profile.xml
@@ -25,7 +25,7 @@
         android:id="@+id/tvScndNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bismillah *Software Engineer*"
+        android:text="@string/deskripsi_profil"
         android:textSize="20dp"
         android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="@id/tvNama"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_marginTop="40dp"
-            android:text="Hidup itu sekali, dan mati itu pasti, bisa jadi nanti, atau setelah ini."
+            android:text="@string/quotes"
             app:layout_constraintStart_toStartOf="@id/tvNama"
             app:layout_constraintEnd_toEndOf="@id/tvNama"
             app:layout_constraintTop_toBottomOf="@id/civLogo"
@@ -57,7 +57,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(Menantang Rasi Bintang - FSTVLST)"
+            android:text="@string/sumber_quotes"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@id/tvNama"
             app:layout_constraintEnd_toEndOf="@id/tvNama"
@@ -65,7 +65,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvData"
-            android:layout_width="500dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="28dp"
             android:backgroundTint="@color/cardparent"
@@ -86,7 +86,7 @@
                     android:id="@+id/tvSekolah"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Sekolah"
+                    android:text="@string/sekolah"
                     android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
                     android:id="@+id/tvSmk6"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="SMK Negri 6 SKA"
+                    android:text="@string/nama_sekolah"
                     android:textSize="16dp"
                     app:layout_constraintTop_toTopOf="@id/tvSekolah"
                     app:layout_constraintBottom_toBottomOf="@id/tvSekolah"
@@ -107,7 +107,7 @@
                     android:id="@+id/tvKelas"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Kelas"
+                    android:text="@string/kelas"
                     android:textSize="20dp"
                     android:layout_marginTop="6dp"
                     android:textStyle="bold"
@@ -118,7 +118,7 @@
                     android:id="@+id/tvXirpl"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="XI RPL"
+                    android:text="@string/nama_kelas"
                     android:textSize="16dp"
                     app:layout_constraintTop_toTopOf="@id/tvKelas"
                     app:layout_constraintBottom_toBottomOf="@id/tvKelas"
@@ -130,7 +130,7 @@
                     android:id="@+id/tvKelahiran"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kelahiran"
+                    android:text="@string/kelahiran"
                     android:textSize="20dp"
                     android:layout_marginTop="6dp"
                     android:textStyle="bold"
@@ -141,7 +141,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="17, Oktober, 2008"
+                    android:text="@string/tanggal_lahir"
                     android:textSize="16dp"
                     app:layout_constraintTop_toTopOf="@id/tvKelahiran"
                     app:layout_constraintBottom_toBottomOf="@id/tvKelahiran"
@@ -152,7 +152,7 @@
                     android:id="@+id/tvGender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gender"
+                    android:text="@string/jenis_kelamin"
                     android:textSize="20dp"
                     android:layout_marginTop="6dp"
                     android:textStyle="bold"
@@ -163,7 +163,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Laki - laki"
+                    android:text="@string/laki_laki"
                     android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="@id/tvGender"
@@ -176,7 +176,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvData3"
-            android:layout_width="500dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
@@ -197,7 +197,7 @@
                     android:id="@+id/tvSosmed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sosial Media"
+                    android:text="@string/sosial_media"
                     android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
