--- a/app/src/main/res/layout-land/activity_temperature.xml
+++ b/app/src/main/res/layout-land/activity_temperature.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     android:layout_marginStart="35dp"
-                    android:hint="Masukkan Suhu"
+                    android:hint="@string/masukkan_suhu"
                     android:inputType="numberDecimal"
                     android:textSize="35dp"
                     android:background="@null"
@@ -57,7 +57,7 @@
                     android:id="@+id/tvHasilSuhuakhir"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Hasil Suhu"
+                    android:text="@string/hasil_suhu"
                     android:textSize="35dp"
                     android:textAlignment="center"
                     android:layout_marginTop="25dp"
@@ -90,7 +90,7 @@
         android:id="@+id/btHitung"
         android:layout_width="200dp"
         android:layout_height="70dp"
-        android:text="Hitung"
+        android:text="@string/hitung"
         app:cornerRadius="10dp"
         android:textColor="@color/logoawal"
         android:layout_marginTop="25dp"
