--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -23,7 +23,7 @@
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
-        android:hint="Masukkan Nama Anda"
+        android:hint="@string/masukkan_nama"
         app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="clear_text">
 
@@ -44,7 +44,7 @@
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="clear_text"
-        android:hint="Masukkan Alamat Anda">
+        android:hint="@string/masukkan_alamat">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -63,7 +63,7 @@
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="clear_text"
-        android:hint="Masukkan Nomor Anda">
+        android:hint="@string/masukkan_nomor">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -81,7 +81,7 @@
         android:textColor="@color/logoawal"
         android:textSize="20sp"
         android:backgroundTint="@color/cardparent"
-        android:text="Simpan" />
+        android:text="@string/simpan" />
 
         <TextView
         android:id="@+id/tvAgama"
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etNomor"
         android:layout_margin="25dp"
-        android:text="Agama"
+        android:text="@string/agama"
         android:textSize="22sp" />
 
     <Spinner
@@ -108,7 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinneragama"
         android:layout_margin="25dp"
-        android:text="Jenis Kelamin"
+        android:text="@string/jenis_kelamin"
         android:textSize="22sp" />
 
     <RadioGroup
@@ -126,7 +126,7 @@
             android:layout_height="50dp"
             android:textSize="18dp"
             android:layout_marginStart="30dp"
-            android:text="Pria" />
+            android:text="@string/pria" />
 
         <RadioButton
             android:id="@+id/rbwanita"
@@ -134,7 +134,7 @@
             android:layout_height="50dp"
             android:textSize="18dp"
             android:layout_marginStart="80dp"
-            android:text="Wanita" />
+            android:text="@string/wanita" />
     </RadioGroup>
 
 
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/rgGender"
         android:layout_margin="25dp"
-        android:text="Hobi"
+        android:text="@string/hobi"
         android:textSize="22sp" />
 
     <CheckBox
@@ -153,7 +153,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvHobi"
         android:layout_marginStart="10dp"
-        android:text="Membaca"
+        android:text="@string/membaca"
         android:textSize="18sp"/>
 
     <CheckBox
@@ -162,7 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cbMembaca"
         android:layout_marginStart="10dp"
-        android:text="Makan"
+        android:text="@string/makan"
         android:textSize="18sp"/>
 
     <CheckBox
@@ -171,7 +171,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cbMakan"
         android:layout_marginStart="10dp"
-        android:text="Tidur"
+        android:text="@string/tidur"
         android:textSize="18sp"/>
 
     <CheckBox
@@ -180,7 +180,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cbTidur"
         android:layout_marginStart="10dp"
-        android:text="Olahraga"
+        android:text="@string/olahraga"
         android:textSize="18sp"/>
 
     </RelativeLayout>
