--- a/app/src/main/res/layout/activity_nota_coffeeshop.xml
+++ b/app/src/main/res/layout/activity_nota_coffeeshop.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvCust"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama Cust : -"
+        android:text="@string/nama_cust_default"
         android:textSize="18sp"
         android:textStyle="bold"
          />
@@ -30,7 +30,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Item"
+        android:text="@string/item"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/lblJml"
         app:layout_constraintHorizontal_weight="2"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Jumlah"
+        android:text="@string/jumlah"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/lblSub"
@@ -55,7 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Harga"
+        android:text="@string/harga"
         android:textAlignment="viewEnd"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Daftar Item..."
+        android:text="@string/daftar_item_default"
         app:layout_constraintEnd_toEndOf="@+id/lblItem"
         app:layout_constraintStart_toStartOf="@+id/lblItem"
         app:layout_constraintTop_toBottomOf="@+id/lblItem" />
@@ -78,7 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="1"
+        android:text="@string/satu"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/lblJml"
         app:layout_constraintStart_toStartOf="@+id/lblJml"
@@ -89,7 +89,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Rp 0"
+        android:text="@string/rp_0"
         android:textAlignment="viewEnd"
         app:layout_constraintEnd_toEndOf="@+id/lblSub"
         app:layout_constraintStart_toStartOf="@+id/lblSub"
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Total: Rp 0"
+        android:text="@string/total_rp_0"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
